Fixed bug #64511 - pdo_dblib segfaults or leaks on nextRowset()